--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -91,7 +91,7 @@ jobs:
       - name: install obdiag and run obdiag test
         run: |
           set -e
-          docker run -id --name "obdiag_ob" oceanbase/oceanbase-ce:4.3.0
+          docker run -id --name "obdiag_ob_latest" oceanbase/oceanbase-ce:latest
           bash workflow_data/wait_observer_run.sh 
           docker cp oceanbase-diagnostic-tool-*.rpm obdiag_ob:/root/
           docker exec -i obdiag_ob /bin/bash -c "yum install -y /root/oceanbase-diagnostic-tool-*.rpm"
@@ -99,8 +99,8 @@ jobs:
           docker cp workflow_data/run_obdiag_test.sh obdiag_ob:/root/run_obdiag_test.sh
           docker exec -i obdiag_ob /bin/bash -c "sh /root/run_obdiag_test.sh"
           echo "obdiag install success"
-  run-with-observer-4_0_0:
-    name: run-with-observer
+  run-with-observer-4_0_0_0:
+    name: run-with-observer-4_0_0_0
     runs-on: ubuntu-latest
     needs: build-rpm
     steps:
@@ -114,11 +114,36 @@ jobs:
       - name: install obdiag and run obdiag test
         run: |
           set -e
-          docker run -id --name "obdiag_ob" oceanbase/oceanbase-ce:4.0.0
+          docker run -id --name "obdiag_ob_4_0_0_0" oceanbase/oceanbase-ce:4.0.0.0
           bash workflow_data/wait_observer_run.sh 
           docker cp oceanbase-diagnostic-tool-*.rpm obdiag_ob:/root/
           docker exec -i obdiag_ob /bin/bash -c "yum install -y /root/oceanbase-diagnostic-tool-*.rpm"
           docker cp example/mini.yml obdiag_ob:/root/.obdiag/config.yml
+          docker cp workflow_data/run_obdiag_test.sh obdiag_ob:/root/run_obdiag_test.sh
+          docker exec -i obdiag_ob /bin/bash -c "sh /root/run_obdiag_test.sh"
+          echo "obdiag install success"
+  run-with-observer-4_2_1:
+    name: run-with-observer-4_2_1
+    runs-on: ubuntu-latest
+    needs: build-rpm
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Download RPM Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: obdiag-rpm-packages
+          path: .
+      - name: install obdiag
+        run: |
+          set -e
+          docker run -id --name "obdiag_ob_4_2_1" oceanbase/oceanbase-ce:4.2.1
+          bash workflow_data/wait_observer_run.sh 
+          docker cp oceanbase-diagnostic-tool-*.rpm obdiag_ob:/root/
+          docker exec -i obdiag_ob /bin/bash -c "yum install -y /root/oceanbase-diagnostic-tool-*.rpm"
+          docker cp example/mini.yml obdiag_ob:/root/.obdiag/config.yml
+      - name: run obdiag test
+          set -e
           docker cp workflow_data/run_obdiag_test.sh obdiag_ob:/root/run_obdiag_test.sh
           docker exec -i obdiag_ob /bin/bash -c "sh /root/run_obdiag_test.sh"
           echo "obdiag install success"
