--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -88,14 +88,17 @@ jobs:
         with:
           name: obdiag-rpm-packages
           path: .
-      - name: install obdiag and run obdiag test
+      - name: install obdiag
         run: |
           set -e
-          docker run -id --name "obdiag_ob_latest" oceanbase/oceanbase-ce:latest
+          docker run -id --name "obdiag_ob_4_2_1" oceanbase/oceanbase-ce:4.2.1
           bash workflow_data/wait_observer_run.sh 
           docker cp oceanbase-diagnostic-tool-*.rpm obdiag_ob:/root/
           docker exec -i obdiag_ob /bin/bash -c "yum install -y /root/oceanbase-diagnostic-tool-*.rpm"
           docker cp example/mini.yml obdiag_ob:/root/.obdiag/config.yml
+      - name: run obdiag test
+        run: |
+          set -e
           docker cp workflow_data/run_obdiag_test.sh obdiag_ob:/root/run_obdiag_test.sh
           docker exec -i obdiag_ob /bin/bash -c "sh /root/run_obdiag_test.sh"
           echo "obdiag install success"
@@ -111,14 +114,17 @@ jobs:
         with:
           name: obdiag-rpm-packages
           path: .
-      - name: install obdiag and run obdiag test
+      - name: install obdiag
         run: |
           set -e
-          docker run -id --name "obdiag_ob_4_0_0_0" oceanbase/oceanbase-ce:4.0.0.0
+          docker run -id --name "obdiag_ob_4_2_1" oceanbase/oceanbase-ce:4.2.1
           bash workflow_data/wait_observer_run.sh 
           docker cp oceanbase-diagnostic-tool-*.rpm obdiag_ob:/root/
           docker exec -i obdiag_ob /bin/bash -c "yum install -y /root/oceanbase-diagnostic-tool-*.rpm"
           docker cp example/mini.yml obdiag_ob:/root/.obdiag/config.yml
+      - name: run obdiag test
+        run: |
+          set -e
           docker cp workflow_data/run_obdiag_test.sh obdiag_ob:/root/run_obdiag_test.sh
           docker exec -i obdiag_ob /bin/bash -c "sh /root/run_obdiag_test.sh"
           echo "obdiag install success"
@@ -143,6 +149,7 @@ jobs:
           docker exec -i obdiag_ob /bin/bash -c "yum install -y /root/oceanbase-diagnostic-tool-*.rpm"
           docker cp example/mini.yml obdiag_ob:/root/.obdiag/config.yml
       - name: run obdiag test
+        run: |
           set -e
           docker cp workflow_data/run_obdiag_test.sh obdiag_ob:/root/run_obdiag_test.sh
           docker exec -i obdiag_ob /bin/bash -c "sh /root/run_obdiag_test.sh"
