--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -97,7 +97,7 @@ jobs:
       - name: install obdiag
         run: |
           set -e
-          docker run -id --name "obdiag_ob_4_2_1" oceanbase/oceanbase-ce:4.2.1
+          docker run -id --name "obdiag_ob" oceanbase/oceanbase-ce:latest
           bash workflow_data/wait_observer_run.sh 
           docker cp oceanbase-diagnostic-tool-*.rpm obdiag_ob:/root/
           docker exec -i obdiag_ob /bin/bash -c "yum install -y /root/oceanbase-diagnostic-tool-*.rpm"
@@ -123,16 +123,16 @@ jobs:
       - name: install obdiag
         run: |
           set -e
-          docker run -id --name "obdiag_ob_4_2_1" oceanbase/oceanbase-ce:4.2.1
+          docker run -id --name "obdiag_ob_4_0_0_0" oceanbase/oceanbase-ce:4.0.0.0
           bash workflow_data/wait_observer_run.sh 
-          docker cp oceanbase-diagnostic-tool-*.rpm obdiag_ob:/root/
-          docker exec -i obdiag_ob /bin/bash -c "yum install -y /root/oceanbase-diagnostic-tool-*.rpm"
-          docker cp example/mini.yml obdiag_ob:/root/.obdiag/config.yml
+          docker cp oceanbase-diagnostic-tool-*.rpm obdiag_ob_4_0_0_0:/root/
+          docker exec -i obdiag_ob_4_0_0_0 /bin/bash -c "yum install -y /root/oceanbase-diagnostic-tool-*.rpm"
+          docker cp example/mini.yml obdiag_ob_4_0_0_0:/root/.obdiag/config.yml
       - name: run obdiag test
         run: |
           set -e
-          docker cp workflow_data/run_obdiag_test.sh obdiag_ob:/root/run_obdiag_test.sh
-          docker exec -i obdiag_ob /bin/bash -c "sh /root/run_obdiag_test.sh"
+          docker cp workflow_data/run_obdiag_test.sh obdiag_ob_4_0_0_0:/root/run_obdiag_test.sh
+          docker exec -i obdiag_ob_4_0_0_0 /bin/bash -c "sh /root/run_obdiag_test.sh"
           echo "obdiag install success"
   run-with-observer-4_2_1:
     name: run-with-observer-4_2_1
@@ -151,12 +151,12 @@ jobs:
           set -e
           docker run -id --name "obdiag_ob_4_2_1" oceanbase/oceanbase-ce:4.2.1
           bash workflow_data/wait_observer_run.sh 
-          docker cp oceanbase-diagnostic-tool-*.rpm obdiag_ob:/root/
-          docker exec -i obdiag_ob /bin/bash -c "yum install -y /root/oceanbase-diagnostic-tool-*.rpm"
-          docker cp example/mini.yml obdiag_ob:/root/.obdiag/config.yml
+          docker cp oceanbase-diagnostic-tool-*.rpm obdiag_ob_4_2_1:/root/
+          docker exec -i obdiag_ob_4_2_1 /bin/bash -c "yum install -y /root/oceanbase-diagnostic-tool-*.rpm"
+          docker cp example/mini.yml obdiag_ob_4_2_1:/root/.obdiag/config.yml
       - name: run obdiag test
         run: |
           set -e
-          docker cp workflow_data/run_obdiag_test.sh obdiag_ob:/root/run_obdiag_test.sh
-          docker exec -i obdiag_ob /bin/bash -c "sh /root/run_obdiag_test.sh"
+          docker cp workflow_data/run_obdiag_test.sh obdiag_ob_4_2_1:/root/run_obdiag_test.sh
+          docker exec -i obdiag_ob_4_2_1 /bin/bash -c "sh /root/run_obdiag_test.sh"
           echo "obdiag install success"
