--- a/.github/workflows/python_file_header_check.yml
+++ b/.github/workflows/python_file_header_check.yml
@@ -19,7 +19,7 @@ jobs:
 
 
       - name: Run header check
-        run: python rpm/check_py_files.py .
+        run: python workflow_data/check_py_files.py .
         working-directory: ${{ github.workspace }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
