--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -102,48 +102,33 @@ jobs:
           docker cp oceanbase-diagnostic-tool-*.rpm obdiag_ob:/root/
           docker exec -i obdiag_ob /bin/bash -c "yum install -y /root/oceanbase-diagnostic-tool-*.rpm"
           docker cp example/mini.yml obdiag_ob:/root/.obdiag/config.yml
-          docker cp workflow_data/run_obdiag_test_analyze.sh obdiag_ob:/root/
-  run-obdiag-test-analyze:
-    name: run-with-observer
+          docker cp workflow_data/run_obdiag_test.sh obdiag_ob:/root/
+          docker exec -i obdiag_ob /bin/bash -c "sh /root/run_obdiag_test.sh"
+          docker rm -f obdiag_ob
+  run-with-observer-4_2_1:
+    name: run-with-observer-4_2_1
     runs-on: ubuntu-latest
-    needs: install-obdiag
+    needs: run-with-observer
     steps:
-      - name: run-obdiag-test-analyze
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Download RPM Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: obdiag-rpm-packages
+          path: .
+      - name: install obdiag
         run: |
           set -e
-          docker exec -i obdiag_ob /bin/bash -c "sh /root/run_obdiag_test_analyze.sh"
-  delete-container:
-    name: delete-container
-    runs-on: ubuntu-latest
-    needs: run-obdiag-test-analyze
-    steps:
-      - name: delete-container
+          docker run -id --name "obdiag_ob" oceanbase/oceanbase-ce:4.2.1
+          bash workflow_data/wait_observer_run.sh
+          docker cp oceanbase-diagnostic-tool-*.rpm obdiag_ob:/root/
+          docker exec -i obdiag_ob /bin/bash -c "yum install -y /root/oceanbase-diagnostic-tool-*.rpm"
+          docker cp example/mini.yml obdiag_ob:/root/.obdiag/config.yml
+      - name: run obdiag test
         run: |
+          set -e
+          docker cp workflow_data/run_obdiag_test.sh obdiag_ob:/root/run_obdiag_test.sh
+          docker exec -i obdiag_ob /bin/bash -c "sh /root/run_obdiag_test.sh"
+          echo "obdiag install success"
           docker rm -f obdiag_ob
-#  run-with-observer-4_2_1:
-#    name: run-with-observer-4_2_1
-#    runs-on: ubuntu-latest
-#    needs: run-with-observer
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v3
-#      - name: Download RPM Artifact
-#        uses: actions/download-artifact@v4
-#        with:
-#          name: obdiag-rpm-packages
-#          path: .
-#      - name: install obdiag
-#        run: |
-#          set -e
-#          docker run -id --name "obdiag_ob" oceanbase/oceanbase-ce:4.2.1
-#          bash workflow_data/wait_observer_run.sh
-#          docker cp oceanbase-diagnostic-tool-*.rpm obdiag_ob:/root/
-#          docker exec -i obdiag_ob /bin/bash -c "yum install -y /root/oceanbase-diagnostic-tool-*.rpm"
-#          docker cp example/mini.yml obdiag_ob:/root/.obdiag/config.yml
-#      - name: run obdiag test
-#        run: |
-#          set -e
-#          docker cp workflow_data/run_obdiag_test.sh obdiag_ob:/root/run_obdiag_test.sh
-#          docker exec -i obdiag_ob /bin/bash -c "sh /root/run_obdiag_test.sh"
-#          echo "obdiag install success"
-#          docker rm -f obdiag_ob
