--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -104,12 +104,8 @@ jobs:
           docker cp oceanbase-diagnostic-tool-*.rpm obdiag_ob:/root/
           docker exec -i obdiag_ob /bin/bash -c "yum install -y /root/oceanbase-diagnostic-tool-*.rpm"
           docker cp example/mini.yml obdiag_ob:/root/.obdiag/config.yml
-      - name: run obdiag test
-        run: |
-          set -e
-          docker cp workflow_data/run_obdiag_test.sh obdiag_ob:/root/run_obdiag_test.sh
+          docker cp workflow_data/run_obdiag_test.sh obdiag_ob:/root/
           docker exec -i obdiag_ob /bin/bash -c "sh /root/run_obdiag_test.sh"
-          echo "obdiag install success"
           docker rm -f obdiag_ob
   run-with-observer-4_2_1:
     name: run-with-observer-4_2_1
@@ -127,7 +123,7 @@ jobs:
         run: |
           set -e
           docker run -id --name "obdiag_ob" oceanbase/oceanbase-ce:4.2.1
-          bash workflow_data/wait_observer_run.sh 
+          bash workflow_data/wait_observer_run.sh
           docker cp oceanbase-diagnostic-tool-*.rpm obdiag_ob:/root/
           docker exec -i obdiag_ob /bin/bash -c "yum install -y /root/oceanbase-diagnostic-tool-*.rpm"
           docker cp example/mini.yml obdiag_ob:/root/.obdiag/config.yml
