--- a/plugins/gather/tasks/observer/rootservice_switch.yaml
+++ b/plugins/gather/tasks/observer/rootservice_switch.yaml
@@ -73,7 +73,7 @@ task:
       - type: sysstat
         sysstat: ""
         global: false
-  - version: "[4.1.0.0, *]"
+  - version: "[4.0.0.0, *]"
     steps:
       - type: sql
         sql: "show variables like 'version_comment';"
@@ -130,7 +130,7 @@ task:
         sql: "select * from oceanbase.GV$OB_LOG_STAT where role='LEADER';"
         global: true
       - type: sql
-        sql: "SELECT TENANT_NAME, TENANT_ID, TENANT_ROLE, STATUS, SWITCHOVER_STATUS FROM oceanbase.DBA_OB_TENANTS"
+        sql: "SELECT * FROM oceanbase.DBA_OB_TENANTS"
         global: true
       - type: sql # 大于1g的内存模块
         sql: "SELECT CASE WHEN tenant_name IS NULL THEN TENANT_ID ELSE tenant_name END tenant_name, host,ctx_name, mod_name, hold, used, count FROM ( SELECT tenant_name,tenant_id,HOST,ctx_name,mod_name,hold,used,COUNT, ROW_NUMBER () OVER ( PARTITION BY tenant_name, HOST ORDER BY hold desc) rnum FROM   (SELECT  b.tenant_name, a.tenant_id, concat(a.svr_ip, ':', a.svr_port) HOST,  a.ctx_name, a.mod_name,  round(a.hold / 1024 / 1024 / 1024) hold, round(a.used / 1024 / 1024 / 1024) used, a.COUNT FROM  oceanbase.__all_virtual_memory_info a  LEFT JOIN oceanbase.__all_tenant b ON a.TENANT_ID = b.TENANT_ID  WHERE a.hold > 1024 * 1024 * 1024 ));"
