--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -107,7 +107,7 @@ jobs:
           set -e
           docker cp workflow_data/run_obdiag_test.sh obdiag_ob:/root/run_obdiag_test.sh
           docker exec -i obdiag_ob /bin/bash -c "ps -aux"
-          docker exec -i obdiag_ob /bin/bash -c "tree /root/ob"
+          docker exec -i obdiag_ob /bin/bash -c "obclient -h127.0.0.1 -u root -P2881 -e 'select version();'"
           docker exec -i obdiag_ob /bin/bash -c "sh /root/run_obdiag_test.sh"
           echo "obdiag install success"
           docker rm -f obdiag_ob
