--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -101,7 +101,7 @@ jobs:
           bash workflow_data/wait_observer_run.sh 
           docker cp oceanbase-diagnostic-tool-*.rpm obdiag_ob:/root/
           docker exec -i obdiag_ob /bin/bash -c "yum install -y /root/oceanbase-diagnostic-tool-*.rpm"
-          docker cp example/mini.yml obdiag_ob:/root/.obdiag/config.yml
+          docker cp workflow_data/config.yml obdiag_ob:/root/.obdiag/config.yml
       - name: run obdiag test
         run: |
           set -e
@@ -130,7 +130,7 @@ jobs:
           bash workflow_data/wait_observer_run.sh
           docker cp oceanbase-diagnostic-tool-*.rpm obdiag_ob:/root/
           docker exec -i obdiag_ob /bin/bash -c "yum install -y /root/oceanbase-diagnostic-tool-*.rpm"
-          docker cp example/mini.yml obdiag_ob:/root/.obdiag/config.yml
+          docker cp workflow_data/config.yml.421 obdiag_ob:/root/.obdiag/config.yml
       - name: run obdiag test
         run: |
           set -e
