--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install dependencies and build obdiag rpm
         run: |
           yum install -y wget rpm-build gcc gcc-c++ make
-          wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh --no-check-certificate > /dev/null
+          wget  --quiet https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh --no-check-certificate
           sh Miniconda3-latest-Linux-x86_64.sh -p /opt/miniconda3 -b
           export PATH=/opt/miniconda3/bin:$PATH
           /opt/miniconda3/bin/conda init
@@ -38,10 +38,6 @@ jobs:
           source activate obdiag
           pip3 install -r requirements3.txt
           bash dev_helper.sh pack
-
-      - name: Find rpm
-        run: |
-          find / -name oceanbase-diagnostic-tool-*.rpm
 
       - name: "Upload rpm"
         uses: actions/upload-artifact@v4
