--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -135,3 +135,59 @@ jobs:
           docker exec -i obdiag_ob /bin/bash -c "export tag=4.2.1 && sh /root/run_obdiag_test.sh"
           echo "obdiag install success"
           docker rm -f obdiag_ob
+  run-with-observer-4_2_5:
+    name: run-with-observer-4_2_5
+    runs-on: ubuntu-latest
+    needs: build-rpm
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Download RPM Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: obdiag-rpm-packages
+          path: .
+      - name: install obdiag
+        run: |
+          set -e
+          export tag="4.2.5"
+          docker run -id --name "obdiag_ob" -e tag=${tag} oceanbase/oceanbase-ce:4.2.5.1-101000092024120918
+          bash workflow_data/wait_observer_run.sh
+          docker cp oceanbase-diagnostic-tool-*.rpm obdiag_ob:/root/
+          docker exec -i obdiag_ob /bin/bash -c "yum install -y /root/oceanbase-diagnostic-tool-*.rpm"
+          docker cp workflow_data/config.yml.421 obdiag_ob:/root/.obdiag/config.yml
+      - name: run obdiag test
+        run: |
+          set -e
+          docker cp workflow_data/run_obdiag_test.sh obdiag_ob:/root/run_obdiag_test.sh
+          docker exec -i obdiag_ob /bin/bash -c "export tag=4.2.5 && sh /root/run_obdiag_test.sh"
+          echo "obdiag install success"
+          docker rm -f obdiag_ob
+  run-with-observer-4_3_5:
+    name: run-with-observer-4_3_5
+    runs-on: ubuntu-latest
+    needs: build-rpm
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Download RPM Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: obdiag-rpm-packages
+          path: .
+      - name: install obdiag
+        run: |
+          set -e
+          export tag="4.3.5"
+          docker run -id --name "obdiag_ob" -e tag=${tag} oceanbase/oceanbase-ce:4.3.5-lts
+          bash workflow_data/wait_observer_run.sh
+          docker cp oceanbase-diagnostic-tool-*.rpm obdiag_ob:/root/
+          docker exec -i obdiag_ob /bin/bash -c "yum install -y /root/oceanbase-diagnostic-tool-*.rpm"
+          docker cp workflow_data/config.yml obdiag_ob:/root/.obdiag/config.yml
+      - name: run obdiag test
+        run: |
+          set -e
+          docker cp workflow_data/run_obdiag_test.sh obdiag_ob:/root/run_obdiag_test.sh
+          docker exec -i obdiag_ob /bin/bash -c "export tag=4.3.5 && sh /root/run_obdiag_test.sh"
+          echo "obdiag install success"
+          docker rm -f obdiag_ob
