--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -97,7 +97,7 @@ jobs:
           docker run -id --name "obdiag_ob" oceanbase/oceanbase-ce:latest
           bash workflow_data/wait_observer_run.sh 
           docker cp oceanbase-diagnostic-tool-*.rpm obdiag_ob:/root/
-          docker exec -i obdiag_ob /bin/bash -c "yum install -y /root/oceanbase-diagnostic-tool-*.rpm"
+          docker exec -i obdiag_ob /bin/bash -c "rpm -ivh /root/oceanbase-diagnostic-tool-*.rpm"
           docker cp workflow_data/config.yml obdiag_ob:/root/.obdiag/config.yml
       - name: run obdiag test
         run: |
