--- a/plugins/display/tasks/observer/table_ndv.yaml
+++ b/plugins/display/tasks/observer/table_ndv.yaml
@@ -9,9 +9,9 @@ task:
           s.OWNER,s.TABLE_NAME,s.COLUMN_NAME,s.NUM_DISTINCT as ndv,s.NUM_NULLS,s.LAST_ANALYZED,(case c.data_type
           when 22 then 'VARCHAR2' when 17 then 'DATE' when 15 then 'NUMBER' when 38 then 'TIMESTAMP' when 30 then 'CLOB/BLOB' when 23 then 'CHAR' when 42 then 'FLOAT' when 39 then 'RAW' when 44 then 'NCHAR' when 43 then 'NVARCHAR2' else c.data_type end) AS COLUMN_TYPE
           from  oceanbase.CDB_TAB_COL_STATISTICS s
-          inner join  oceanbase.__all_database d on  s.OWNER=d.database_name
-          inner join oceanbase.__all_virtual_table t on  s.TABLE_NAME=t.TABLE_NAME and s.CON_ID=t.tenant_id and d.database_id=t.database_id
-          inner join oceanbase.__all_virtual_column c  on t.table_id = c.table_id and c.COLUMN_NAME=s.COLUMN_NAME
+          inner join oceanbase.CDB_OB_DATABASES d on s.OWNER=d.DATABASE_NAME and s.CON_ID=d.TENANT_ID
+          inner join oceanbase.__all_virtual_table t on s.TABLE_NAME=t.TABLE_NAME and s.CON_ID=t.tenant_id
+          inner join oceanbase.__all_virtual_column c on t.table_id = c.table_id and c.COLUMN_NAME=s.COLUMN_NAME
           where s.table_name = upper('#{table_name}')
           and s.OWNER=upper('#{database_name}');"
         global: true
